Leftover adjustments from RabbitMQ testing